<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="app_name">Mopital Doctor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_title">Mopital\nSign In</string>
    <string name="email_input">E-mail: </string>
    <string name="password_input">Password: </string>
    <string name="not_registered">Not Registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_title">Mopital\nSign Up </string>
    <string name="username_input">Username: </string>
    <string name="confirm_password_input">Password Again: </string>
    <string name="sign_up">Sign Up</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="password_not_match">Password does not match</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_treatment_icon">Add Treatment</string>

</resources>
